[package]
name = "incrementally_constrained_prf"
version = "0.1.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20 = { version = "0.6" }
lightning = { path = "../rust-lightning/lightning" }
bitcoin_hashes = "0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false

[profile.release]
debug = true
